infra/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: usfarcade
  labels:
    app.kubernetes.io/name: usfarcade
